# BOM-

./: DESIGN.md  README.md
BOM_design_specification/: BOMMaster_API接口规范文档_APISpec.docx  BOMMaster_产品需求文档_PRD.docx  BOMMaster_技术栈选型文档_TechStack.docx  BOMMaster_数据库设计文档_DatabaseDesign.docx  BOMMaster_系统架构设计文档_Architecture.docx  BOMMaster_编码与AI_Agent提示词规范_CodingStandards.docx  generate_all_docs.js
Docs/: API接口规范文档 (APISpec).md  BOMMaster_API接口规范文档_APISpec.md  BOMMaster_产品需求文档_PRD.md  BOMMaster_技术栈选型文档_TechStack.md  BOMMaster_数据库设计文档_DatabaseDesign.md  BOMMaster_系统架构设计文档_Architecture.md  BOMMaster_编码与AI_Agent提示词规范_CodingStandards.md  产品需求文档 (PRD).md  技术栈选型文档(TechStack).md  数据库设计文档(DatabaseDesign).md  系统架构设计文档(Architecture).md  编码与AI Agent提示词规范 (CodingStandards).md
backups/: bom-backup-20260530-222511.json
code/: .gitignore  fix-bomcode.js  index.html  package-lock.json  package.json  push.bat  start.bat  tsconfig.json  vite.config.ts
code/src/: App.vue  main.ts
code/src-tauri/: Cargo.toml  tauri.conf.json
code/src-tauri/src/: errors.rs  main.rs
code/src-tauri/src/commands/: bom.rs  component.rs  project.rs
code/src-tauri/src/db/: connection.rs  mod.rs  schema.rs
code/src-tauri/src/models/: bom.rs  component.rs  mod.rs  project.rs
code/src/layout/: MainLayout.vue
code/src/mock/: index.ts  store.ts
code/src/pages/: BomEditor.vue  ComponentLibrary.vue  ProjectDetail.vue  ProjectList.vue  Settings.vue
code/src/router/: index.ts
code/src/stores/: bomStore.ts  historyStore.ts  projectStore.ts  uiStore.ts
code/src/types/: api.ts  bom.ts  component.ts  (+2 more)
(+7 files in other folders)
